# kinova-ros

./: run_simulation.sh
kinova_gazebo/launch/: jacam_launch.launch
kinova_gazebo/worlds/: jacam.world
kinova_moveit/kinova_grasp/: CMakeLists.txt  package.xml
kinova_moveit/kinova_grasp/include/: robust_grasp.h  script_reader.h
kinova_moveit/kinova_grasp/src/: robust_grasp.cpp
kinova_moveit/kinova_grasp/srv/: Grasp.srv
script/: arg_parser.py  generate_plots_for_folder.py  installation.txt  learn_discriminator.py  learn_generator.py  learn_scripts.py  merge_3x3.py  plot_train_log.py  plot_train_log_multi.py  process_scripts.py  run.sh  script_parser_json_to_flat.py
script/plotscripts/: create_3x3_fig.py  generate_plots_for_THE_TABLE.py  generate_plots_for_data.py  generate_plots_for_disstep.py  generate_plots_for_exp.py  generate_plots_for_genstep.py  generate_plots_for_log.py  plot_multi_colored_traj.py  plot_traj.py  plot_traj_multi_view.py
script/simulation_snapshots/: rename.sh  resize.py
script/tracked_pick_place/: e000_res.json  e000_res.traj  e001_res.json  e001_res.traj  e002_res.json  e002_res.traj  e003_res.json  e003_res.traj  e004_res.json  e004_res.traj  e005_res.json  e005_res.traj  e006_res.json  e006_res.traj  e007_res.json  e007_res.traj  e008_res.json  e008_res.traj  e009_res.json  e009_res.traj  e010_res.json  e010_res.traj  e011_res.json  e011_res.traj
script/tracked_pouring/: e001_res.traj  e002_res.traj  e004_res.json  e005_res.json  e006_res.traj  e007_res.json  e007_res.traj  e008_res.json  e008_res.traj  e010_res.json  e010_res.traj  e011_res.json
script/tracked_results/: e000_res.json  e001_res.json  e002_res.json  e003_res.json  e003_res.traj  e004_res.traj  e005_res.traj  e006_res.json  e009_res.json  e009_res.traj  e011_res.traj
script/trajs/: e000_res.traj
workstation_description/: CMakeLists.txt  package.xml
workstation_description/urdf/: workstation.gazebo  workstation.xacro
