<?xml version="1.0"?>
<package>
  <name>workstation_description</name>
  <version>0.0.0</version>
  <description>The workstation_description package</description>

  <license>BSD</license>

  <author email="haoxuw@gmail.com">Haoxu Wang</author>
  <maintainer email="haoxuw@gmail.com">Haoxu Wang</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
